Style: Prevent overly-spaced nav wrapping

--- a/app/jf.css
+++ b/app/jf.css
@@ -94,19 +94,18 @@ body
     box-sizing: content-box;
     grid-template-rows: auto auto 2em;
     gap: 1em 0;
-    padding: 0 2em;
+    padding: 0 20px;
     max-width: 920px;
     margin: 0 auto;
     background: white;
 }
 body > header
 {
-  --item-gap: 2em;
   display: flex;
-  flex-wrap: wrap;
+  flex-wrap: nowrap;
   justify-content: space-between;
-  align-items: baseline;
-  gap: var(--item-gap);
+  align-items: center;
+  gap: 1em;
   margin: 0;
 }
 body > header h1
@@ -122,7 +121,7 @@ body > header h1 > a:link
 body > header nav > ul
 {
   display: flex;
-  gap: var(--item-gap);
+  gap: 2em;
   list-style: none;
   padding: 0;
   margin: 0;
